# Scratch_Detection

./: README.md  commands.txt  history.txt  main.py  pyproject.toml  test_models.py
data_explore/: explore.ipynb  split_data.py
models/classifier/: test.py  test_full.py  train.py  visualizer.py
models/unet/: test.py  test_unet.py  train_unet.py
models/utils/: transforms.py  transforms_resize.py  transforms_unet.py
